test-cases/valid/reject/invalid_shadowing.ul
void main() {
    foo(2);
}

void foo(int bar) {
    boolean bar; // Variables cannot shadow parameters
}
